work/yaml/nexus/nexus-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    ingress-whitelist: "*.rdev.tech"
  name: nexus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus
spec:
  rules:
  - host: nexus-dev.rdev.tech
    http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 80
  tls:
  - hosts:
    - nexus-dev.rdev.tech
    secretName: nexus-dev-tls-pem
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nexus
subsets:
  - addresses:
      - ip: 192.168.81.20
    ports:
      - port: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: nexus
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
